--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,8 +21,8 @@
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #555555; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #0c2e8a; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #50d8af; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --heading-color: #ce2c47; /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #ed7f44; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -30,11 +30,11 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #555555;  /* The default color of the main navmenu links */
-  --nav-hover-color: #50d8af; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #ed7f44; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #555555; /* Used for navigation links of the dropdown items in the navigation menu. */
-  --nav-dropdown-hover-color: #50d8af; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  --nav-dropdown-hover-color: #ed7f44; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -45,10 +45,10 @@
 }
 
 .dark-background {
-  --background-color: #091e5b;
+  --background-color: #ce2c47;
   --default-color: #ffffff;
   --heading-color: #ffffff;
-  --surface-color: #0e2d89;
+  --surface-color: #ce2c47;
   --contrast-color: #ffffff;
 }
 
@@ -208,7 +208,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-height: 90px;
   margin-right: 8px;
 }
 
@@ -807,7 +807,7 @@ section,
 
 .hero .carousel-item::before {
   content: "";
-  background-color: color-mix(in srgb, var(--background-color), transparent 30%);
+  background-color: color-mix(in srgb, var(--background-color), transparent 80%);
   position: absolute;
   inset: 0;
   z-index: 2;
@@ -1080,12 +1080,12 @@ section,
   padding: 30px;
   margin: 30px 15px;
   position: relative;
-  height: 100%;
+  height: 250px;
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 90px;
-  border-radius: 50px;
+  width: 50px;
+  border-radius: 5px;
   margin-right: 15px;
 }
 
